analytics calendar - tweaked layout, changed activities to be a bullet list on the right hand side to fix overlaping text issue with long names or multiple events on the same calendar dates.

--- a/OSBLEPlus/trunk/development/OSBLE.Web/Areas/Analytics/Content/Calendar.css
+++ b/OSBLEPlus/trunk/development/OSBLE.Web/Areas/Analytics/Content/Calendar.css
@@ -129,3 +129,7 @@ div[data-wzstep="DataVisualization"] div[data-type="spinner"] img {
     margin: 0;
     padding: 2px 0px 2px 5px;
 }
+
+#activities-list {    
+    padding: 5px;
+}
